# yolov7_obb_onnxruntime

./: README.md
yolov7_rotated_ort/: CMakeLists.txt  rotated_yolov7_ort.cpp
